Complete user module

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -16,6 +16,12 @@
     padding: 15px;
     padding-bottom: 0px;
   }
+
+  .login-form-forgot {
+    display: block;
+    margin-bottom: 10px;
+    text-decoration: none;
+  }
   
   .ant-btn-default {
     border: none !important;
