--- a/src/pages/dashboard/layout/index.less
+++ b/src/pages/dashboard/layout/index.less
@@ -37,6 +37,7 @@ div.layoutCustom {
     overflow: auto;
 
     .ant-layout-sider-children {
+      overflow-y: scroll;
       .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
         background-color: #1abc9c !important;
         color           : #FFF !important;
