--- a/src/pages/dashboard/layout/index.less
+++ b/src/pages/dashboard/layout/index.less
@@ -6,12 +6,12 @@ div.layoutCustom {
     background-color: #F6F5F5;
     z-index         : 1;
     border-bottom   : 2px solid #1abc9c;
-    position: fixed;
-    width: 100%;
+    position        : fixed;
+    width           : 100%;
 
     div.topHeader {
       height                 : 64px;
-      display                : -webkit-flex;
+      display                : --webkit-flex;
       display                : flex;
       -webkit-flex-direction : row;
       flex-direction         : row;
@@ -20,8 +20,24 @@ div.layoutCustom {
       -webkit-align-items    : center;
       align-items            : center;
 
-      img {
-        height: 70%;
+      .left-items {
+        display    : flex;
+        width      : 300px;
+        align-items: center;
+
+        img {
+          width: 95%;
+        }
+
+        .navbar-toggler-icon {
+          font-size : 30px;
+          cursor    : pointer;
+          transition: color 0.3s;
+
+          &:hover {
+            color: #1890ff;
+          }
+        }
       }
     }
   }
@@ -34,21 +50,22 @@ div.layoutCustom {
     z-index            : 0;
     height             : calc(100vh - 64px);
     box-shadow         : 5px 0 20px -10px rgba(0, 0, 0, 0.5);
-    overflow: auto;
+    overflow           : auto;
 
     .ant-layout-sider-children {
       overflow-y: scroll;
+
       .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
         background-color: #1abc9c !important;
         color           : #FFF !important;
       }
-  
+
       .ant-menu-inline .ant-menu-item:hover,
       .ant-menu-inline .ant-menu-submenu-title:hover {
         background-color: rgba(26, 188, 156, 0.5) !important;
         color           : #FFF !important;
       }
-  
+
       .ant-menu-submenu-title {
         border-right: 3px solid #1abc9c !important;
       }
@@ -58,19 +75,19 @@ div.layoutCustom {
       background: #8c8c8c;
 
       .anticon {
-        font-size: 18px;
-        transition: .3s;
+        font-size     : 18px;
+        transition    : .3s;
         vertical-align: middle;
       }
     }
 
     .ant-layout-sider-trigger:hover {
       background: #595959;
-      
+
       .anticon {
-        color: #ffffff;
+        color    : #ffffff;
         font-size: 20px;
-      } 
+      }
     }
   }
 
