--- a/src/components/listSchedule/index.less
+++ b/src/components/listSchedule/index.less
@@ -11,3 +11,23 @@
     }
   }
 }
+
+@media only screen and (max-width: 850px) {
+  .list-schedule {
+    .left-items {
+      display: block;
+    }
+
+    .list-schedule-nam {
+      margin: 10px 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 493px) {
+  .list-schedule {
+    .txt-tim {
+      margin: 10px 0;
+    }
+  }
+}
